--- a/templates/base.html
+++ b/templates/base.html
@@ -4,15 +4,22 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
   <title>{% block title %}{% endblock %} | Globomantics</title>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a href="{{ url_for('home') }}" class="navbar-brand"></a>
-      <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Globomantics" height="40px">
+      <a href="{{ url_for('home') }}" class="navbar-brand">
+        <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Globomantics" height="40px">
+      </a>
+      <button class="navbar-toggler" type="button"
+              data-toggle="collapse" data-target="#navbarResponsive"
+              aria-controls="navbarResponsive" aria-expanded="false"
+              aria-label="Toggle Naviagation">
+      <span class="navbar-toggler-icon"></span>
+      </button>
     </div>
   </nav>
   {% block body %} {% endblock %}
