--- a/templates/base.html
+++ b/templates/base.html
@@ -27,8 +27,8 @@
           <li class="nav-item {{ 'active' if active_page == 'home' else '' }}">
             <a href="{{ url_for('home') }}" class="nav-link">Home</a>
           </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">Add new item</a>
+          <li class="nav-item {{ 'active' if active_page == 'new_item' else '' }}">
+            <a href="{{ url_for('new_item') }}" class="nav-link">Add new item</a>
           </li>
         </ul>
       </div>
