--- a/templates/new_item.html
+++ b/templates/new_item.html
@@ -15,6 +15,10 @@
         <input class="form-control" type="text" name="title">
       </div>
       <div class="form-group">
+        <label for="price">Price</label>
+        <input class="form-control" type="text" name="price">
+      </div>
+      <div class="form-group">
         <label for="description">Description</label>
         <textarea class="form-control" name="description"  rows="3"></textarea>
       </div>
