--- a/templates/base.html
+++ b/templates/base.html
@@ -36,6 +36,20 @@
   </nav>
 
   <div class="container">
+    {% with messages = get_flashed_messages(with_categories=True) %}
+
+      {% if messages %}
+        {% for type, content in messages %}
+          <div class="alert alert-{{ type }} alert-dismissible my-4" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+            {{ content }}
+          </div>
+        {% endfor %}
+      {% endif %}
+
+    {%endwith%}
   {% block content %}{% endblock %}
   </div>
 
