--- a/templates/new_item.html
+++ b/templates/new_item.html
@@ -10,20 +10,21 @@
   <div class="col-lg-7 offset-lg-2 my-5">
     <h1>Add new Item</h1> <hr>
     <form action="{{ url_for('new_item') }}" method="post">
+      {{ form.hidden.tag() }}
       <div class="form-group">
-        <label for="title">Title</label>
-        <input class="form-control" type="text" name="title">
+        {{ form.title.label }}
+        {{ form.title(class="form-control") }}
       </div>
       <div class="form-group">
-        <label for="price">Price</label>
-        <input class="form-control" type="text" name="price">
+        {{ form.price.label }}
+        {{ form.price(class="form-control") }}
       </div>
       <div class="form-group">
-        <label for="description">Description</label>
-        <textarea class="form-control" name="description"  rows="3"></textarea>
+        {{ form.description.label }}
+        {{ form.description(class="form-control", rows="3") }}
       </div>
       <hr>
-      <input class="form-control btn btn-primary" type="submit" value="Submit">
+      {{ form.submit(class="form-control btn btn-primary") }}
     </form>
   </div>
 </div>
