--- a/templates/new_item.html
+++ b/templates/new_item.html
@@ -23,6 +23,14 @@
         {{ form.description.label }}
         {{ form.description(class="form-control", rows="3") }}
       </div>
+      <div class="form-group">
+        {{ form.category.label }}
+        {{ form.category(class="form-control", rows="3") }}
+      </div>
+      <div class="form-group">
+        {{ form.subcategory.label }}
+        {{ form.subcategory(class="form-control", rows="3") }}
+      </div>
       <hr>
       {{ form.submit(class="form-control btn btn-primary") }}
     </form>
