create read functionality and view

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,13 +15,13 @@
         <div class="col-lg-4 col-md-6 mb-4">
           <div class="card h-100">
               <div class="embed-responsive embed-responsive-16by9">
-                <a href="#">
+                <a href="{{ url_for('item', item_id=item.id) }}">
                   <img class="card-img-top embed-responsive-item" src="{{ url_for('static', filename='images/placeholder.png') }}">
                 </a>
               </div>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">{{ item.title }}</a>
+                  <a href="{{ url_for('item', item_id=item.id) }}">{{ item.title }}</a>
                 </h4>
                 <h5>{{ "$%.2f"|format(item.price) }}</h5>
                 <p class="card-text">{{ item.description }}</p>
