--- a/templates/item.html
+++ b/templates/item.html
@@ -6,7 +6,10 @@
 
   <div class="row">
     <div class="col-lg-3 my-4">
-
+    <form method="POST" action="{{ url_for('delete_item', item_id=item.id) }}">
+      {{ deleteItemForm.hidden_tag() }}
+      {{ deleteItemForm.submit(class="btn btn-danger", onclick="return confirm('Are you sure you want to delete this item?');") }}
+    </form>
     </div>
     <div class="col-lg-9">
       <div class="card mt-4">
