--- a/templates/item.html
+++ b/templates/item.html
@@ -6,7 +6,8 @@
 
   <div class="row">
     <div class="col-lg-3 my-4">
-    <form method="POST" action="{{ url_for('delete_item', item_id=item.id) }}">
+      <a href="{{ url_for('edit_item', item_id=item.id) }}" class="btn btn-primaty">Edit item</a>
+    <form class="delete-form" method="POST" action="{{ url_for('delete_item', item_id=item.id) }}">
       {{ deleteItemForm.hidden_tag() }}
       {{ deleteItemForm.submit(class="btn btn-danger", onclick="return confirm('Are you sure you want to delete this item?');") }}
     </form>
